--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "0.44.5",
     "lucide-react": "^0.542.0",
+    "mapbox-gl": "^3.14.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "cmdk": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.0.0",
+    "@radix-ui/react-separator": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
