--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "zod": "^4.1.5",
     "cmdk": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.0",
-    "@radix-ui/react-separator": "^1.0.0"
+    "@radix-ui/react-separator": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -44,6 +46,7 @@
     "@types/react-dom": "^19",
     "dotenv": "17.2.2",
     "drizzle-kit": "0.31.4",
+    "@types/qrcode": "^1.5.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
