--- a/package.json
+++ b/package.json
@@ -14,39 +14,44 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.9.0",
+    "@aws-sdk/client-s3": "^3.882.0",
+    "@aws-sdk/s3-request-presigner": "^3.882.0",
     "@hookform/resolvers": "^5.2.1",
+    "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@neondatabase/serverless": "1.0.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "drizzle-orm": "0.44.5",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.14.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.5",
-    "cmdk": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.0.0",
-    "@radix-ui/react-separator": "^1.0.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "qrcode": "^1.5.3"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.9",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "17.2.2",
     "drizzle-kit": "0.31.4",
-    "@types/qrcode": "^1.5.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
