Add notification subscription and delivery tables to database schema; update header component to include dynamic subscribe modal and add new script command for applying notifications.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:apply-notifications": "node scripts/apply_notifications.mjs",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
