--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:apply-notifications": "node scripts/apply_notifications.mjs",
+    "db:apply-ai": "node scripts/apply_ai.mjs",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
@@ -39,10 +40,15 @@
     "mapbox-gl": "^3.14.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "openai": "^4.52.0",
     "qrcode": "^1.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.5"
